# cfmm-arbitrage

./: .gitignore  README.md  ca.crt  pyproject.toml
.github/workflows/: bump_tag_and_publish.yml  unittests.yml
chain/: config.py  contracts.py  exceptions.py  logger.py  protocols.py  types.py  web3_api.py
chain/abi/: __init__.py  path.py  types.py
chain/abi/ARBITRUM/DHV_Beyond/: DHVlens.py  L2ChainlinkPricer.py  OptionRegistry.py  OpynAddressBook.py  OpynController.py  OpynNewCalculator.py  OpynOracle.py  UserPositionlens.py  accounting.py  authority.py  beyondPricer.py  blackScholes.py  chainlinkpricefeed.py  clearinghouse.py  gmxHedgingReactor.py  gmxpositionrouter.py  gmxreader.py  gmxvault.py  liquidityPool.py  manager.py  (+21 more)
chain/abi/codegen/: __init__.py  contractspec.py  funcspec.py  protocolspec.py  utils.py  varspec.py
chain/api/: __init__.py  reader.py  types.py
chain/api/dhv/: __init__.py  collatparams.py  positions.py  sabrparams.py  slippage.py  slippageparams.py  spreadparams.py  tenor.py
chain/api/dhv_comp/: __init__.py  collatparams.py  positions.py  sabrparams.py  slippagegradient.py
chain/chains/: __init__.py  address_register.py
test/: __init__.py  config.py  test_codegen.py  test_sabrparams.py  test_utils.py
test/abi/codegen/: test___init__.py  test_codegen.py  test_contractspec.py  test_protocolspec.py
test/api/: __init__.py  make_res.py  test_spread.py
test/api/dhv/: __init__.py  test___init__.py  test_integration.py  test_make_res.py  test_unit_dhv.py
test/api/dhv_comp/: test_integration.py  test_make_res.py  test_unit_dhv.py
(+141 files in other folders)
