[tool.poetry]
name = "chain"
version = "0.0.3"
description = "Collection of APIs for pulling and parsing on-chain data. Async and sync."
authors = ["degeneral <degeneral@rysk.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
web3 = "^6.4.0"
dataclass-wizard = "^0.22.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
